# zim

./: CMakeLists.txt  readme.md
examples/: CMakeLists.txt  example.hpp
examples/demo_01/: CMakeLists.txt  app.cpp  app.hpp  database.cpp  database.hpp  form_renderer.cpp  main.cpp  page_master.hpp
examples/demo_01/apps/gallery/: app.cpp  app.hpp  page_overview.hpp  page_upload.hpp
examples/demo_01/apps/gallery/assets/templates/: overview.html
examples/demo_01/assets/templates/: footer.html  master.html  sidebar.html
examples/demo_01/database/: CMakeLists.txt  database.cpp  database.hpp
examples/demo_01/types/: CMakeLists.txt  image.hpp
lib/: CMakeLists.txt
lib/zim/: CMakeLists.txt  app.cpp  app.hpp  controller.cpp  controller.hpp  environment.hpp  external.cmake  page.hpp  page_content.cpp  page_content.hpp  page_master.cpp  page_master.hpp  zim-config.cmake.in
lib/zim/database/: CMakeLists.txt  client.hpp  config.hpp  manager.cpp  manager.hpp  session.hpp  types.hpp
lib/zim/page/: CMakeLists.txt  content.cpp  content.hpp  form.cpp  form.hpp  forms.cpp  forms.hpp  master.cpp  master.hpp  page.hpp
